--- a/output/index.html
+++ b/output/index.html
@@ -5,9 +5,10 @@
   <title>Tessel Web App</title>
 </head>
 <body>
+	<h1>Servo Controller</h1>
 	<form id = "servo">
-		<input id="position" />
-		<button>Send</button>
+		<input id="position" placeholder="0-1 only"/>
+		<button>Run</button>
 	</form>
 </body>
 <script src="/socket.io/socket.io.js"></script>
