--- a/input/index.html
+++ b/input/index.html
@@ -5,10 +5,11 @@
 		<title>Tessel</title>
 	</head>
 	<body>
-		<ul id="accelerater">
-		<li id="x">x: <span id="xval"></span></li>
-		<li id="y">y: <span id="yval"></span></li>
-		<li id="z">z: <span id="zval"></span></li>
+		<h1>Accelerometer on Tessel 2</h1>
+		<ul id="accelerometer">
+		<li id="x">x-direction: <span id="xval"></span></li>
+		<li id="y">y-direction: <span id="yval"></span></li>
+		<li id="z">z-direction: <span id="zval"></span></li>
 		</ul>	
 	</body>
 	<script src="/socket.io/socket.io.js"></script>
